--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="http://park-kosa.ru" class="website__link" target="blank">park-kosa.ru</a>
             <p class="website__url-heading">URL</p>
           </div>
-          <img class="place__image" src="./images/Куршская коса.jpg" alt="Коса">
+          <img class="place__image" src="./images/Куршская_коса.jpg" alt="Коса">
           <div class="place__text">
             <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
@@ -111,7 +111,7 @@
             <a href="https://vk.com/baikalmile" class="website__link" target="blank">https://vk.com/baikalmile</a>
             <p class="website__url-heading">URL</p>
           </div>
-          <img class="place__image" src="./images/Зимний Байкал.jpg" alt="Зимний Байкал"> 
+          <img class="place__image" src="./images/Зимний_Байкал.jpg" alt="Зимний Байкал"> 
           <div class="place__text">
             <p class="place__paragraph">
                 Всем известен Байкал как крупнейшее озеро 
