--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="http://park-kosa.ru" class="website__link" target="blank">park-kosa.ru</a>
             <p class="website__url-heading">URL</p>
           </div>
-          <img class="place__image" src="./images/Куршская_коса.jpg" alt="Коса">
+          <img class="place__image" src="./images/Коса.jpg" alt="Коса">
           <div class="place__text">
             <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
@@ -111,7 +111,7 @@
             <a href="https://vk.com/baikalmile" class="website__link" target="blank">https://vk.com/baikalmile</a>
             <p class="website__url-heading">URL</p>
           </div>
-          <img class="place__image" src="./images/Зимний_Байкал.jpg" alt="Зимний Байкал"> 
+          <img class="place__image" src="./images/Байкал.jpg" alt="Зимний Байкал"> 
           <div class="place__text">
             <p class="place__paragraph">
                 Всем известен Байкал как крупнейшее озеро 
@@ -140,12 +140,8 @@
         </div>
       </div>
       <div class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__item"  target="blank">
-          <div class="cover__content">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-          </div>
-        </a>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </div>
     </div>
       <div class="footer">
