--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а здесь.</p>
-        <div class="lead__content">
           <img src="./images/kalegin-michail-179870-unsplash.jpg" class="lead__image" alt="Карта путешествия">
           <p class="lead__text">ваша полка — верхняя</p>
-        </div>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -74,7 +72,7 @@
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
-            <h3 class="place__url">URL</h3>
+            <p class="place__url">URL</p>
             <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
           </div>
           <img src="./images/Коса.jpg" class="place__image" alt="Куршская Коса">
@@ -91,7 +89,7 @@
         <div class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <h3 class="place__url">URL</h3>
+            <p class="place__url">URL</p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank">National Geographic</a>
           </div>
           <img src="./images/Кольский.jpg" class="place__image" alt="Кольский">
@@ -105,7 +103,7 @@
         <div class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <h3 class="place__url">URL</h3>
+            <p class="place__url">URL</p>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link" target="_blank">Facebook</a>
           </div>
           <img src="./images/Алтай.jpg" class="place__image" alt="Алтай">
@@ -121,7 +119,7 @@
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <h3 class="place__url">URL</h3>
+            <p class="place__url">URL</p>
             <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img src="./images/Байкал.jpg" class="place__image" alt="Зимний Байкал">
@@ -137,7 +135,7 @@
         <div class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <h3 class="place__url">URL</h3>
+            <p class="place__url">URL</p>
             <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img src="./images/Карелия.jpg" class="place__image" alt="Карелия">
@@ -150,10 +148,8 @@
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
-          <div class="cover__content">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-          </div>
         </a>
       </section>
     </main>
