--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <img src="./images/kalegin-michail-179870-unsplash.jpg" class="lead__image" alt="Карта путешествия">
           <p class="lead__text">ваша полка — верхняя</p>
       </section>
+
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">
@@ -54,6 +55,7 @@
           </li>
         </ul>
       </section>
+
       <section class="photo-grid">
         <img src="./images/foto1.jpg" alt="Окно в поезде" class="photo-grid__image">
         <img src="./images/foto2.jpg" alt="Пики гор" class="photo-grid__image">
@@ -68,6 +70,7 @@
         <img src="./images/foto11.jpg" alt="Скалы" class="photo-grid__image">
         <img src="./images/foto12.jpg" alt="Туманные горы" class="photo-grid__image">
       </section>
+
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
@@ -86,6 +89,7 @@
               мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
           </div>
         </div>
+
         <div class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
@@ -100,6 +104,7 @@
               в Мурманск.</p>
           </div>
         </div>
+
         <div class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
@@ -108,14 +113,22 @@
           </div>
           <img src="./images/Алтай.jpg" class="place__image" alt="Алтай">
           <div class="place__text">
-            <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
-              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. 
-              А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. 
-              Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. 
-              И знаменитые манулы — тоже обитатели Алтайского края.</p>
+            <p class="place__paragraph">
+              Алтай — одно из красивейших мест в России. 
+              В первую очередь из-за гор: если ехать вдоль хребта, 
+              вы увидите склоны, усыпанные соснами, горные реки и озёра. 
+              А если вы откроете в автомобиле окна, сможете 
+              познакомиться с невидимым чудом здешних мест — горным воздухом.
+            </p>
+            <p class="place__paragraph">
+              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. 
+              Так вы увидите всё разнообразие местной флоры и фауны. 
+              По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. 
+              И знаменитые манулы — тоже обитатели Алтайского края.
+            </p>
           </div>
         </div>
+
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
@@ -124,14 +137,20 @@
           </div>
           <img src="./images/Байкал.jpg" class="place__image" alt="Зимний Байкал">
           <div class="place__text">
-            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
-              в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. 
+            <p class="place__paragraph">
+              Всем известен Байкал как крупнейшее озеро 
+              в мире. Многие также знают, что это самый большой 
+              источник пресной воды и одно из красивейших мест в России.
+            </p>
+            <p class="place__paragraph">
+              Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. 
               Это такой вид спорта, когда лыжник привязывает себя 
               к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. 
-              В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+              В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+            </p>
           </div>
         </div>
+
         <div class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
@@ -140,16 +159,24 @@
           </div>
           <img src="./images/Карелия.jpg" class="place__image" alt="Карелия">
           <div class="place__text">
-            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+            <p class="place__paragraph">
+              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу 
+              сибирская лиственница не растёт западнее Водлозера. 
+              Зато здесь она вымахивает на 30 метров — леса карельских национальных парков 
+              из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше 
+              чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
               В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
-              в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+              в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+            </p>
           </div>
         </div>
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+            </p>
         </a>
       </section>
     </main>
@@ -157,19 +184,52 @@
       <nav class="footer__nav">
         <ul class="footer__list">
           <li class="footer__list-link">
-            <a href="https://yandex.ru/maps/" class="footer__link" target="_blank" title="Карты">Карты</a>
+            <a 
+            href="https://yandex.ru/maps/" 
+            class="footer__link" target="_blank" 
+            title="Карты">
+              Карты
+            </a>
           </li>
+
           <li class="footer__list-item">
-            <a href="https://yandex.ru/pogoda/" class="footer__link" target="_blank" title="Погода">Погода</a>
+            <a 
+            href="https://yandex.ru/pogoda/" 
+            class="footer__link" 
+            target="_blank" 
+            title="Погода">
+              Погода
+            </a>
           </li>
+
           <li class="footer__list-item">
-            <a href="https://rasp.yandex.ru/" class="footer__link" target="_blank" title="Расписание">Расписание</a>
+            <a 
+            href="https://rasp.yandex.ru/" 
+            class="footer__link" 
+            target="_blank" 
+            title="Расписание">
+              Расписание
+            </a>
           </li>
+
           <li class="footer__list-item">
-            <a href="https://calendar.yandex.ru/" class="footer__link" target="_blank" title="Календарь">Календарь</a>
+            <a 
+            href="https://calendar.yandex.ru/" 
+            class="footer__link" 
+            target="_blank" 
+            title="Календарь">
+              Календарь
+            </a>
           </li>
+
           <li class="footer__list-item">
-            <a href="https://travel.yandex.ru/" class="footer__link" target="_blank" title="Путешествия">Путешествия</a>
+            <a 
+            href="https://travel.yandex.ru/" 
+            class="footer__link" 
+            target="_blank" 
+            title="Путешествия">
+              Путешествия
+            </a>
           </li>
         </ul>
       </nav>
